--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
+    "i18next": "^25.0.1",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
+    "next-i18next": "^15.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-i18next": "^15.5.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -42,4 +46,3 @@
     "typescript": "^5.3.3"
   }
 }
-
