--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@prisma/client": "^6.6.0",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
@@ -41,7 +42,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.32",
-    "prisma": "^5.7.1",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
