--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^6.6.0",
+    "@sendgrid/mail": "^8.1.5",
     "axios": "^1.9.0",
     "bcrypt": "^5.1.1",
     "cookie": "^1.0.2",
